force-app/main/default/objects/custom_create311__c/custom_create311__c.object-meta.xml
<CustomObject>
    <label>Custom created object311</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects311</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>