force-app/main/default/objects/custom_create311__c/fields/custom_create_311field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_311field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 311field505</label>
    <type>Checkbox</type>
</CustomField>